...
                    if (currentRoute == Screen.Main.route) {
                        IconButton(onClick = {
                            navHostController.navigate(Screen.Favorite.route)
                        }) {
                            Icon(
                                imageVector = Icons.Filled.Favorite,
                                contentDescription = "favorite_page",
                            )
                        }

                        IconButton(onClick = {
                            navHostController.navigate(Screen.About.route)
                        }) {
                            Icon(
                                imageVector = Icons.Filled.AccountCircle,
                                contentDescription = "about_page",
                            )
                        }
                    }
                },
                navigationIcon = {
                    when (currentRoute) {
...
