...
) {
    LazyColumn(
        contentPadding = PaddingValues(top = 0.dp, bottom = 16.dp, start = 16.dp, end = 16.dp),
        state = rememberLazyListState(),
        verticalArrangement = Arrangement.spacedBy(8.dp),
        modifier = modifier
            .testTag("vegetable_list"),
    ) {
        stickyHeader {
            SearchBarComponent(
                onQueryChange = onQueryChange,
                query = searchQuery,
            )
...
